--- a/RestAPIFlask/requirements.txt
+++ b/RestAPIFlask/requirements.txt
@@ -1,7 +1,12 @@
+aniso8601==9.0.1
+attrs==22.1.0
 click==8.1.3
 colorama==0.4.5
+flasgger==0.9.5
 Flask==2.2.2
+Flask-JWT-Extended==4.4.4
 flask-marshmallow==0.14.0
+Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 flask-swagger==0.2.14
 flask-swagger-ui==4.11.1
@@ -9,11 +14,16 @@ greenlet==1.1.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.16.0
 MarkupSafe==2.1.1
 marshmallow==3.18.0
+mistune==2.0.4
 packaging==21.3
+PyJWT==2.5.0
 PyMySQL==1.0.2
 pyparsing==3.0.9
+pyrsistent==0.18.1
+pytz==2022.2.1
 PyYAML==6.0
 six==1.16.0
 SQLAlchemy==1.4.41
