--- a/RestAPIFlask/requirements.txt
+++ b/RestAPIFlask/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.8.1
 aniso8601==9.0.1
 attrs==22.1.0
 click==8.1.3
@@ -6,6 +7,7 @@ flasgger==0.9.5
 Flask==2.2.2
 Flask-JWT-Extended==4.4.4
 flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 flask-swagger==0.2.14
@@ -15,8 +17,10 @@ importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.16.0
+Mako==1.2.3
 MarkupSafe==2.1.1
 marshmallow==3.18.0
+marshmallow-sqlalchemy==0.28.1
 mistune==2.0.4
 packaging==21.3
 PyJWT==2.5.0
@@ -27,5 +31,6 @@ pytz==2022.2.1
 PyYAML==6.0
 six==1.16.0
 SQLAlchemy==1.4.41
+webargs==8.2.0
 Werkzeug==2.2.2
 zipp==3.8.1
