--- a/RestAPIFlask/docker-compose.yml
+++ b/RestAPIFlask/docker-compose.yml
@@ -1,32 +1,20 @@
-version: "3.9"
-
+version: "3"
 services:
-  db:
-    image: mysql:5.7
-    restart: always
-    environment:
-      MYSQL_DATABASE: db
-      MYSQL_USER: 'root'
-      MYSQL_ROOT_PASSWORD: 'root'
+  app:
+    build: .
+    links:
+      - db
     ports:
-      - '3307:3306'
-    expose:
-      # Opens port 3306 on the container
-      - '3306'
-      # Where our data will be persisted
-   
-  web:
-      build: .
-      command: python view.py 0.0.0.0:5000
-      volumes:
-        - .:/RestAPIFlask
-        - ../:/app
-        - ./db/:/app.db
-      ports:
-        - "5000:5000"
-      
-      depends_on:
-        - db
+      - "5000:5000"
+
+  db:
+    image: mysql:8.0.21
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - ./db:/docker-entrypoint-initdb.d/:ro
     
 
 
