--- a/RestAPIFlask/requirements.txt
+++ b/RestAPIFlask/requirements.txt
@@ -1,13 +1,20 @@
 alembic==1.8.1
 aniso8601==9.0.1
+async-timeout==4.0.2
 attrs==22.1.0
+cachelib==0.9.0
+cffi==1.15.1
 click==8.1.3
 colorama==0.4.5
+cryptography==38.0.1
+Deprecated==1.2.13
 flasgger==0.9.5
 Flask==2.2.2
+Flask-Caching==2.0.1
 Flask-JWT-Extended==4.4.4
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
+flask-redis==0.4.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 flask-swagger==0.2.14
@@ -23,14 +30,17 @@ marshmallow==3.18.0
 marshmallow-sqlalchemy==0.28.1
 mistune==2.0.4
 packaging==21.3
+pycparser==2.21
 PyJWT==2.5.0
 PyMySQL==1.0.2
 pyparsing==3.0.9
 pyrsistent==0.18.1
 pytz==2022.2.1
 PyYAML==6.0
+redis==4.3.4
 six==1.16.0
 SQLAlchemy==1.4.41
 webargs==8.2.0
 Werkzeug==2.2.2
+wrapt==1.14.1
 zipp==3.8.1
